@@ -1,5 +1,10 @@
 2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>
 
+	* Source/CFString.c: Do not require the use of libicuio.
+	* Source/GNUmakefile: Update library dependency.
+
+2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>
+
 	* Headers/CoreFoundation/CFData.h:
 	* Source/CFData.m:
 	* Source/CFData.c:
